--- a/pom.xml
+++ b/pom.xml
@@ -754,6 +754,7 @@
             <!-- Skips unit tests if the value of skip.unit.tests property
               is true -->
             <skipTests>${skip.unit.tests}</skipTests>
+            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
             <!-- Excludes integration tests when unit tests are run. -->
             <excludes>
               <exclude>**/IT*.java</exclude>
